--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,72 +1,47 @@
-nav ul {
-  list-style: none;
-  text-align: center;
-}
-nav ul li {
-  display: inline-block;
-}
-nav ul li a {
-  display: block;
-  padding: 10px;
-  text-decoration: none;
-  color: #aaa;
-  text-transform: uppercase;
-}
-nav ul li a,
-nav ul li a:after,
-nav ul li a:before {
-  transition: all .5s;
-}
-nav ul li a:hover {
-  color:  #bd7912;
-}
-nav.header ul li a {
-  position: relative;
-}
-nav.header ul li a:after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 0%;
-  content: '.';
-  color: transparent;
-  background: #aaa;
-  height: 1px;
-}
-nav.header ul li a:hover:after {
-  width: 100%;
+.header-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  max-width: 100vw;
 }
 
 .header-title {
   color: #464f6d;
   justify-self: start;
-  margin-left: 10vw;
+  margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 3vh;
+  font-size: 2rem;
   display: flex;
   align-items: center;
 }
 
-.nav-section {
-  justify-content: end;
-  right: 0;
+.menu-icon {
+  display: none;
+  color: #464f6d;
 }
 
-.header-buttons {
+.fa-bars {
+  color: #464f6d;
+}
+
+.header-menu {
   display: grid;
   grid-template-columns: repeat(4, auto);
-  gap: 30px;
+  grid-gap: 10px;
   list-style: none;
   text-align: center;
-  width: 1000px;
+  width: 60vw;
   justify-content: end;
   margin-right: 2rem;
-  margin-left: 20px;
-  font-size: 2rem;
-  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.header-item {
+  height: 80px;
 }
 
 .header-links {
@@ -75,27 +50,104 @@ nav.header ul li a:hover:after {
   align-items: center;
   text-decoration: none;
   padding: 0.5rem 1rem;
+  box-sizing: border-box;
   height: 100%;
 }
 
-.header-links.home-link{
-  color: #1c7ce2;
+.header-links:hover {
+  border-bottom: 4px solid #464f6d;
+  transition: all 0.2s ease-out;
 }
 
-.header-links.home-link:hover {
+.nav-links-mobile {
+  display: none;
+}
+
+.home-link{
+  color: #1c7ce2;
+
+}
+
+.home-link:hover {
   color:  #12BD79;
 }
 
-/* Laptop */
-@media (max-height: var(--laptop-height)) and (max-width: var(--laptop-width)) {
-  .header-buttons {
-    font-size: 1rem;
+@media (max-width: 960px) {
+  .header-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: calc(100vh - 120px);
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    padding-bottom: 40px;
   }
-}
 
-/* Phone Sideways */
-@media (max-height: var(--phone-width)) and (max-width: var(--phone-height)) {
-  .header-buttons {
-    font-size: 0.8rem;
+  .header-menu.active {
+    background: #242222;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  .header-links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
+
+  .header-links:hover {
+    background-color: #fff;
+    color: #242424;
+    border-radius: 0;
+  }
+
+  .header-title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 50%);
+  }
+
+  .menu-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+    color: #464f6d;
+  }
+
+  .fa-times {
+    color: #464f6d;
+    font-size: 2rem;
+  }
+
+  .header-links-mobile {
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: #464f6d;
+    padding: 14px 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s ease-out;
+  }
+
+  .header-links-mobile:hover {
+    background: #fff;
+    color: #242424;
+    transition: 250ms;
   }
 }
